Bug 42887 - current git doesn't compile with debug enabled
Summary: current git doesn't compile with debug enabled
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-13 15:08 UTC by Clemens Eisserer
Modified: 2011-11-14 01:35 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Clemens Eisserer 2011-11-13 15:08:06 UTC
sna_glyphs.c: In function 'glyphs_via_mask':
sna_glyphs.c:718:3: error: expected expression before 'uint32_t'
sna_glyphs.c:718:3: error: called object 'format->depth' is not a function
sna_glyphs.c:718:3: error: expected ')' before 'width'
make[3]: *** [sna_glyphs.lo] Error 1
make[3]: Leaving directory `/home/ce/xf86-video-intel/src/sna'
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory `/home/ce/xf86-video-intel/src'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `
Comment 1 Chris Wilson 2011-11-14 01:35:16 UTC
commit f033172d2f383c7e17362a10f56c4958fb9a3a6b
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Nov 14 09:32:53 2011 +0000

    sna: Fix debug compilation
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42887
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.