sna: Fix debug compilation

Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42887
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>